<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.javaconsumers.festpay.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_current_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:hint="@string/new_password_confirm"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/button_update_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/update_account"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/logout"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
